added an svg logo and some small stuff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Troy A Wilson - Front-end Web Developer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- Icon in the tab bar, right now it's a bit small, will change later -->
+  <link rel="icon" href="images/tawlogo.svg">
   <!-- Poppins google font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <!-- Scripts for the chart plug in -->
@@ -48,7 +50,7 @@
         <div class ="about-goals-skills">
       <div class ="about-info">
         <h4>My Goals</h4>
-        <p class ="indent">I am a front-end web developer with skills in HTML, CSS, Javascript, and jQuery, Skills I'm currently working on are Python and ReactJS. I'm passionate about learning and growing my skill set to improve myself as a developer.While development is where I feel I truly shine I also have an interest in design with skills in Photoshop and wireframing. </p>
+        <p class ="indent">I am a front-end web developer with skills in HTML, CSS, Javascript, and jQuery, Skills I'm currently working on are Python and ReactJS. I'm passionate about learning and growing my skill set to improve myself as a developer.While development is where I feel I truly shine I also have an interest in design with skills in Photoshop and Sketch. </p>
       </div>
       <!-- Chart with skills on it, thought it'd be a cool touch also an exmple of plugin and chart use -->
       <div class ="skills">
@@ -377,7 +379,7 @@
       Footer seciton is the wrap up containing links to my social medias, a cute logo that I designed as well as boring but important
       copyright information and credit for the icons used
     -->
-      <img class="footer-logo" src ="images/tawlogo.png">
+      <img class="footer-logo" src ="images/tawlogo.svg">
       <!-- font for logo is Fredoka One -->
       <ul class ="footer-nav">
         <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
@@ -386,7 +388,6 @@
       </ul>
       <p class="copyright">&copy 2018, Troy <span class ="pinkText">A</span> Wilson.</p>
       <div class="icon-madeby">
-        Check out the new logo that I created on <a href="http://logomakr.com" title="Logo Makr">LogoMakr.com</a> https://logomakr.com/9gH7vJ
         Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </footer>
 </div>
