Added proper images for portfolio
Currently: Need to change the lorem ipsum on the page to real text

Notes: What are freelance prices?

--- a/index.html
+++ b/index.html
@@ -112,11 +112,14 @@
 
         <h4>My Portfolio</h4>
           <!-- Not sure about keeping the primary tools bit in there, seems redundant -->
+          <!-- Slice tool used the dimensions 700x700
+              CMD + SHFT + 3 for full screen capture
+         -->
         <div class ="project">
-          <img src ="https://placeimg.com/350/350/tech/sepia">
+          <img src ="images/Portfolio images/project-seven-thumb.svg">
           <div class="project-information">
             <h6>Game Show App</h6>
-            <p>Hang man-like game app using Javascript</p>
+            <p>Hang man-like game app using Javascript test test test test test test</p>
             <span>Primary tools</span>
             <ul>
               <li>Javascript</li>
@@ -133,7 +136,7 @@
         </div>
 
         <div class ="project">
-        <img src ="https://placeimg.com/350/350/people/grayscale">
+        <img src ="images/Portfolio images/project-six-thumb.svg">
           <div class="project-information">
             <h6>Dynamic Video Player</h6>
             <p>Videoe player with dynamic transcript tracking</p>
@@ -153,7 +156,7 @@
         </div>
 <!-- Might change this one for a different project so I wont link the anchor -->
         <div class ="project">
-          <img src ="https://placeimg.com/350/350/nature">
+          <img src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Interactive Photo Gallery</h6>
             <p>Interactive photo gallery  more txt huh</p>
@@ -173,7 +176,7 @@
         </div>
 
         <div class ="project">
-          <img src ="https://placeimg.com/350/350/arch/sepia">
+          <img src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Employee Directory</h6>
             <p>I've created a Employee pulling information from the user API</p>
@@ -193,7 +196,7 @@
         </div>
 
         <div class ="project">
-          <img src ="https://placeimg.com/350/350/animals/sepia">
+          <img src ="images/Portfolio images/project-eleven-thumb.svg">
           <div class="project-information">
           <h6>ReactJS Photo Gallery</h6>
             <p>Using the Flickr API and ReactJS I've constructed photo gallery</p>
