--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <!-- Icon in the tab bar, right now it's a bit small, will change later -->
-  <link rel="icon" href="images/tawlogo.svg">
+  <link rel="shortcut icon" type="image/svg" href="images/tawlogo.png">
   <!-- Poppins google font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <!-- Scripts for the chart plug in -->
@@ -383,7 +383,7 @@
       copyright information and credit for the icons used
     -->
       <img class="footer-logo" src ="images/tawlogo.svg">
-      <!-- font for logo is Fredoka One -->
+      <!-- font for logo is Skia bold -->
       <ul class ="footer-nav">
         <li><a href="https://twitter.com/_TroyWilson" target="_blank" class="social twitter">Twitter</a></li>
         <li><a href ="https://www.linkedin.com/in/troy-wilson-019b87a7/" target="_blank" class="social linkedin">LinkedIn</a></li>
