--- a/index.html
+++ b/index.html
@@ -119,16 +119,18 @@
           <img src ="images/Portfolio images/project-seven-thumb.svg">
           <div class="project-information">
             <h6>Game Show App</h6>
-            <p>Hang man-like game app using Javascript test test test test test test</p>
-            <span>Primary tools</span>
-            <ul>
-              <li>Javascript</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-            </ul>
+            <div class="small-hidden">
+              <p>Hang man-like game app using Javascript test test test test test test</p>
+              <span>Primary tools</span>
+              <ul>
+                <li>Javascript</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+              </ul>
+            </div>
             <a href ="https://github.com/TroyAWilson/TechdegreeProjectSeven">
               <div class="link">
-                <p>Learn more...<p>
+                <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
               </div>
             </a>
@@ -139,16 +141,18 @@
         <img src ="images/Portfolio images/project-six-thumb.svg">
           <div class="project-information">
             <h6>Dynamic Video Player</h6>
-            <p>Videoe player with dynamic transcript tracking</p>
-            <span>Primary tools</span>
-            <ul>
-              <li>Javascript</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+            <div class="small-hidden">
+              <p>Videoe player with dynamic transcript tracking</p>
+              <span>Primary tools</span>
+              <ul>
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
             <a href ="https://github.com/TroyAWilson/TechdegreeProjectSix">
               <div class="link">
-                <p>Learn more...<p>
+                <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
               </div>
             </a>
@@ -159,16 +163,18 @@
           <img src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Interactive Photo Gallery</h6>
-            <p>Interactive photo gallery  more txt huh</p>
-            <span>Primary tools</span>
-            <ul>
-              <li>Javascript</li>
-              <li>HTML</li>
-              <li>CSS</li>
-            </ul>
+            <div class="small-hidden">
+              <p>Interactive photo gallery  more txt huh</p>
+              <span>Primary tools</span>
+              <ul>
+                <li>Javascript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+              </ul>
+            </div>
             <a href ="https://github.com/TroyAWilson/TechdegreeProjectSeven">
               <div class="link">
-                <p>Learn more...<p>
+                <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
               </div>
             </a>
@@ -179,16 +185,18 @@
           <img src ="images/Portfolio images/project-ten-thumb.svg">
           <div class="project-information">
             <h6>Employee Directory</h6>
-            <p>I've created a Employee pulling information from the user API</p>
-            <span>Primary tools</span>
-            <ul>
-              <li>Javascript</li>
-              <li>jQuery Plugin</li>
-              <li>Something somtheing API</li>
-            </ul>
+            <div class="small-hidden">
+              <p>I've created a Employee pulling information from the user API</p>
+              <span>Primary tools</span>
+              <ul>
+                <li>Javascript</li>
+                <li>jQuery Plugin</li>
+                <li>Something somtheing API</li>
+              </ul>
+            </div>
             <a href ="https://github.com/TroyAWilson/TechdegreeProjectTen">
               <div class="link">
-                <p>Learn more...<p>
+                <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
               </div>
             </a>
@@ -198,17 +206,19 @@
         <div class ="project">
           <img src ="images/Portfolio images/project-eleven-thumb.svg">
           <div class="project-information">
-          <h6>ReactJS Photo Gallery</h6>
-            <p>Using the Flickr API and ReactJS I've constructed photo gallery</p>
-            <span>Primary tools</span>
-            <ul>
-              <li>Javascript</li>
-              <li>ReactJS</li>
-              <li>Flickr API</li>
-            </ul>
+            <h6>ReactJS Photo Gallery</h6>
+            <div class="small-hidden">
+              <p>Using the Flickr API and ReactJS I've constructed photo gallery</p>
+              <span>Primary tools</span>
+              <ul>
+                <li>Javascript</li>
+                <li>ReactJS</li>
+                <li>Flickr API</li>
+              </ul>
+            </div>
             <a href ="https://github.com/TroyAWilson/techdegree-project-eleven">
               <div class="link">
-                <p>Learn more...<p>
+                <p>Learn more...</p>
                 <img src ="images/arrow.svg" width="25px" height="25px">
               </div>
             </a>
@@ -259,8 +269,8 @@
       <!-- I'll remove this inline code and put it into the sass file when I've put sass onto this computer  -->
       <img height ="600px" overflow="hidden" src ="images/closeupcode.jpg">
       <div class="break-quote">
-        <p>"Mathematical science shows what is. It is the language of unseen relations between things. But to use and apply that language, we must be able fully to appreciate, to feel, to seize the unseen, the unconscious."</p>
-        <p>-Ada Lovelace</p>
+        <!-- <p>"Mathematical science shows what is. It is the language of unseen relations between things. But to use and apply that language, we must be able fully to appreciate, to feel, to seize the unseen, the unconscious."</p>
+        <p>-Ada Lovelace</p> -->
       </div>
     </div>
 
@@ -324,7 +334,7 @@
           <img class="contact-icon contact-phone" src ="images/call.svg" width ="20px" height ="20px">
           <div class ="contact-phone-number">
             <h6>Phone:</h6>
-            <p>(707)-712-1542</p>
+            <p> (707)-712-1542</p>
           </div>
         </div>
 
@@ -370,6 +380,7 @@
             <textarea>
             </textarea>
             <button class="contact-submit-button">Submit</button>
+            <!-- Need to remove default behavior on this button -->
           </div>
         </form>
       </div>
